// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons|Actions All types 1`] = `
Array [
  <button
    class="css-4xnzo1"
  >
    Array
  </button>,
  <button
    class="css-4xnzo1"
  >
    Boolean
  </button>,
  <button
    class="css-4xnzo1"
  >
    Empty Object
  </button>,
  <button
    class="css-4xnzo1"
  >
    File
  </button>,
  <button
    class="css-4xnzo1"
  >
    Function A
  </button>,
  <button
    class="css-4xnzo1"
  >
    Bound Function B
  </button>,
  <button
    class="css-4xnzo1"
  >
    Infinity
  </button>,
  <button
    class="css-4xnzo1"
  >
    -Infinity
  </button>,
  <button
    class="css-4xnzo1"
  >
    NaN
  </button>,
  <button
    class="css-4xnzo1"
  >
    null
  </button>,
  <button
    class="css-4xnzo1"
  >
    Number
  </button>,
  <button
    class="css-4xnzo1"
  >
    Multiple
  </button>,
  <button
    class="css-4xnzo1"
  >
    Plain Object
  </button>,
  <button
    class="css-4xnzo1"
  >
    Object (depth: 2)
  </button>,
  <button
    class="css-4xnzo1"
  >
    RegExp
  </button>,
  <button
    class="css-4xnzo1"
  >
    String
  </button>,
  <button
    class="css-4xnzo1"
  >
    Symbol
  </button>,
  <button
    class="css-4xnzo1"
  >
    SyntheticEvent
  </button>,
  <button
    class="css-4xnzo1"
  >
    undefined
  </button>,
  <button
    class="css-4xnzo1"
  >
    Window
  </button>,
]
`;

exports[`Storyshots Addons|Actions Basic example 1`] = `
<button
  class="css-4xnzo1"
>
  Hello World
</button>
`;

exports[`Storyshots Addons|Actions Circular Payload 1`] = `
<button
  class="css-4xnzo1"
>
  Circular Payload
</button>
`;

exports[`Storyshots Addons|Actions Decorated action + config 1`] = `
<button
  class="css-4xnzo1"
>
  Moving away from this story will persist the action logger
</button>
`;

exports[`Storyshots Addons|Actions Decorated action 1`] = `
<button
  class="css-4xnzo1"
>
  Native Event
</button>
`;

exports[`Storyshots Addons|Actions Decorated actions + config 1`] = `
<button
  class="css-4xnzo1"
>
  Moving away from this story will persist the action logger
</button>
`;

exports[`Storyshots Addons|Actions Decorated actions 1`] = `
<button
  class="css-4xnzo1"
>
  Native Event
</button>
`;

exports[`Storyshots Addons|Actions Limit Action Output 1`] = `
Array [
  <button
    class="css-4xnzo1"
  >
    False
  </button>,
  <button
    class="css-4xnzo1"
  >
    True
  </button>,
]
`;

exports[`Storyshots Addons|Actions Multiple actions + config 1`] = `
<button
  class="css-4xnzo1"
>
  Moving away from this story will persist the action logger
</button>
`;

exports[`Storyshots Addons|Actions Multiple actions 1`] = `
<button
  class="css-4xnzo1"
>
  Hello World
</button>
`;

exports[`Storyshots Addons|Actions Multiple actions as object 1`] = `
<button
  class="css-4xnzo1"
>
  Hello World
</button>
`;

exports[`Storyshots Addons|Actions Multiple actions, object + config 1`] = `
<button
  class="css-4xnzo1"
>
  Moving away from this story will persist the action logger
</button>
`;

exports[`Storyshots Addons|Actions Persisting the action logger 1`] = `
Array [
  <p>
    Moving away from this story will persist the action logger
  </p>,
  <button
    class="css-4xnzo1"
  >
    Object (configured clearOnStoryChange: false)
  </button>,
]
`;

exports[`Storyshots Addons|Actions Reserved keyword as name 1`] = `
<button
  class="css-4xnzo1"
>
  Delete
</button>
`;

exports[`Storyshots Addons|Actions configureActionsDepth 1`] = `
<button
  class="css-4xnzo1"
>
  Object (configured depth: 2)
</button>
`;

exports[`Storyshots Addons|Actions.deprecated Decorated Action 1`] = `
<button
  class="css-4xnzo1"
>
  Native Event
</button>
`;
